--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 
-<div class="text-center " >
+<div class="text-center p-4  " >
 <button id="seemore-btn" type="button" class="btn btn-warning ">See More</button>
 </div>
     </main>
